[package]
name = "scale"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.22"
sui-sdk = { path = "../sui/crates/sui-sdk" }
sui-keys = {  path = "../sui/crates/sui-keys" }
# sui-json-rpc-types = {  path = "../sui/crates/sui-json-rpc-types" }
sui = {  path = "../sui/crates/sui" }
tokio = { version = "1", features = ["full"] }
tokio-stream="0.1.8"
env_logger="0.10.0"
anyhow = "1.0.66"
thiserror = "1.0.36"
log = "0.4.16"
home="0.5.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.14"
serde_json="~1"
chrono="0.4.22"
num_enum="0.5.4"
async-trait = "0.1.60"