[package]
name = "scale"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.22"
sui-sdk = { path = "../sui/crates/sui-sdk" }
sui-keys = {  path = "../sui/crates/sui-keys" }
sui-types = {  path = "../sui/crates/sui-types" }
sui-json-rpc-types = {  path = "../sui/crates/sui-json-rpc-types" }
shared-crypto = { path = "../sui/crates/shared-crypto" }
move-core-types = { path = "../sui/external-crates/move/crates/move-core-types" }
sui = {  path = "../sui/crates/sui" }
tokio = { version = "1", features = ["full"] }
tokio-stream="0.1.8"
env_logger="0.10.0"
anyhow = "1.0.68"
thiserror = "1.0.38"
log = "0.4.16"
home="0.5.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.14"
serde_json="~1"
num_enum="0.6.0"
async-trait = "0.1.60"
tokio-tungstenite = {version = "*",features = ["native-tls"]}
tokio-cron-scheduler = "0.9.1"
sled="0.34.7"
dashmap="5.4.0"
flume="0.10.14"
chrono={version = "0.4.23",features = ["serde"]}
axum= {version="0.6.1",features = ["ws", "headers"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
headers = "0.3"
fastcrypto="0.1.0"
influxdb2_client= {path="../influxdb2_client"}
csv="1.1.6"
# move-core-types = { git = "https://github.com/move-language/move", rev = "60cec12b1ed9382836aa4c141e445656d39375e1", features = ["address32"] }
cached="0.44.0"
reqwest = { version = "0.11", features = ["json"] }
base64="0.21.2"
bcs = "0.1.4"
sqlx = { version = "0.7", features = [ "runtime-tokio","postgres","macros","migrate","chrono","json" ] }
# sea-orm = { version = "0.12", features = [ "sqlx-postgres","runtime-tokio", "macros" ,"debug-print","with-chrono","debug-print"] }